<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/targetList">

    <TextView
        android:id="@+id/targetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/targetName"
        android:textColor="@color/mission_color"
        android:layout_margin="@dimen/adapter_margin"/>

    <TableLayout
        android:id="@+id/targetInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/adapter_margin"
        android:background="@color/missionList_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label1"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label2"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label3"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/info3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label4"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/info4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/label5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label5"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/info5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/label6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label6"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/info6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/label7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label7"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/info7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/label8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label8"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding" />

            <TextView
                android:id="@+id/info8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>

            <TextView
                android:id="@+id/label9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label9"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding" />

            <TextView
                android:id="@+id/info9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/mission_color"
                android:paddingStart="@dimen/adapter_horizontal_padding"
                android:paddingEnd="@dimen/adapter_horizontal_padding"/>
        </TableRow>

    </TableLayout>
</LinearLayout>